@@ -1,4 +1,4 @@
 DIST kxstitch-0.8.tar.bz2 992146 RMD160 3f38c3f96452b6a0b8d01b03f5fef7f84a2f7823 SHA1 da28607290b6837fb0aeae24f1e0bac31ad7c71f SHA256 13ed87d05237565e5a845edc2b60c858d6e5302f830709da6099847cf2cd13b1
 EBUILD kxstitch-0.8.ebuild 812 RMD160 d93a9c517c6688f5318fce3c856c7831399d5d32 SHA1 baf07ed4a83e1e24f25de78263baeb6493127aaf SHA256 d8a6898438884c82cf8297d13232042bb8723dfd71938bb176926dd7d7133c77
-MISC ChangeLog 269 RMD160 e2ef8d990d12fc83ad10853604f103817d10b163 SHA1 25504daddcd73651d97ce5a86436e50271700dc5 SHA256 1ca6ef6493fbca0703127b3b91601f2a4b79e93e7d10c1048c8abe2944d725c4
-MISC metadata.xml 932 RMD160 ef38b772d65b0a7de035343825ec5d30e925cef0 SHA1 472d85f262e27707fc28e6ed18c476ba0ebefb74 SHA256 8b0c087c003e728f672c3f014d4bd424a4280d638b92aa517e8fee9c24a6d2d0
+MISC ChangeLog 359 RMD160 39bb080a553618317f92e467767d875ea600e6bf SHA1 50acbbb332b84380dde393584c087d8edbe81db6 SHA256 01ae2094788905a0571236f3bd038a4139034f81a7944eb1788e42825c26ad86
+MISC metadata.xml 811 RMD160 593413b7c785c1f34c8424ba1b0a3e53d561b018 SHA1 bae33c9df69dfe29cb35df89122ac3f4c95f91ac SHA256 3b235d8eff27c6dd64f2fd62b0b0cd2f93425cf7565438cb46576a808230feb1
