@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/kxstitch
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Sep 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> metadata.xml:
+  Fix metadata.xml
 
   16 Sep 2006; Thomas Patrick (curmudgeon) <throw_away_2002@yahoo.com>
   +kxstitch-0.8.ebuild, +metadata.xml:
